Polished membership registration, refactored Input field components, fixed 404 page, favicon

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -125,6 +125,11 @@ label {
   left: 0;
 }
 
+/** DatePicker Input library **/
+.react-datepicker-wrapper {
+  width: 100%;
+}
+
 /** Input type text **/
 
 input[type="text"],
